syntax = "proto3";

package exercise.v1;

option go_package = "exercise/v1;exercisev1";

import "exercise/v1/exercise_property.proto";

message ExercisePropertyValue {
  ExerciseProperty  property = 1;
  ExercisePropertyValueUnion value = 2;
}

message ExercisePropertyValueUnion {
  oneof either {
    bool bool_value = 1;
    string string_value = 2;
    StringListExercisePropertyValue string_list_value = 3;
    int32 int_value = 4;
    IntPairExercisePropertyValue int_pair_value = 5;
  }
}

message StringListExercisePropertyValue {
  repeated string values = 1;
}

message IntPairExercisePropertyValue {
  int32 lover_value = 1;
  int32 higher_value = 2;
}
