syntax = "proto3";

package exercise.v1;

option go_package = "exercise/v1;exercisev1";

message Property {
  string name = 1;
  PropertyType type = 2;
}

enum PropertyType {
  PROPERTY_TYPE_UNSPECIFIED = 0;
  PROPERTY_TYPE_BOOL = 1;
  PROPERTY_TYPE_STRING = 2;
  PROPERTY_TYPE_STRING_LIST = 3;
  PROPERTY_TYPE_INT = 4;
  PROPERTY_TYPE_INT_PAIR = 5;
}
